# anomaly-detection

./: .cz.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
conf/base/: logging.yml  mlflow.yml
scripts/: install_dependencies.sh  install_tools.sh  post_generation.sh
src/anomaly_detection/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/tests/: test_run.py
