[tool.poetry]
name = "anomaly_detection"
version = "0.1.0"
description = ""
authors = ["Marlon Ziegler <marlon.ziegler93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Python Interpreter Version
python = "3.10.10"

# Plotting
seaborn = ">=0.11.2"

# Orchestration
kedro = "0.18.3"
kedro-mlflow = "0.11.4"
kedro-viz = ">=5.1.1"

# === USER DEFINED DEPENDENCIES HERE ===

# Developement Dependencies
[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.9.2"
jupyterlab = ">=3.3.4"

# Documentation Dependencies
[tool.poetry.group.docs.dependencies]
furo = ">=2022.04.07"
myst-parser = ">=0.17.2"


# Testing Dependencies
[tool.poetry.group.test.dependencies]
pytest = ">=7.1.0"
pytest-cov = ">=4.0"

# Linting Dependencies
[tool.poetry.group.lint.dependencies]
pre-commit = ">=2.18.0"
commitizen = ">=2.39.1"
black = ">=22.12.0"
flake8 = ">=5.0.4"
flake8-docstrings = ">=1.6.0"
darglint = ">=1.8.1"
isort = ">=5.11.4"
pep8-naming = ">=0.13.3"
pydocstyle = ">=6.2.2"
mypy = ">=0.991"
unimport = ">=0.12.3"

[tool.poetry.scripts]
"anomaly_detection" = "anomaly_detection.__main__:main"

[tool.kedro]
package_name = "anomaly_detection"
project_name = "anomaly_detection"
project_version = "0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
atomic = true

[tool.unimport]
gitignore = true
remove = true
include_star_import = true
ignore_init = true

[tool.isort]
src_paths = ["anomaly_detection"]
profile = "black"
line_length = 100
atomic = true

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
disallow_any_generics = false
check_untyped_defs = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.pyplot"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "seaborn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = """
--cov-report html \
--cov src/anomaly_detection -ra"""

[tool.coverage.paths]
source = ["src/anomaly_detection"]
tests = ["src/tests"]

[tool.coverage.run]
branch = true
source = ["src/anomaly_detection", "src/tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    "raise AssertionError",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod"
]

# ignore kedro files
omit = [
    "src/anomaly_detection/__main__.py",
    "src/anomaly_detection/pipeline_registry.py",
    "src/anomaly_detection/settings.py",
]
